--- a/doc.ipynb
+++ b/doc.ipynb
@@ -326,11 +326,30 @@
                                         "<font color='goldenrod'>res.isCompleted():</font>   ---------->   shows wheater a task is still runing or not <br>\n",
                                         "<font color='goldenrod'>res.ready():</font>  ---------->   shows if the task was recived by celery or not <br>\n",
                                         "<font color='goldenrod'>res.isSuccessful():</font>  ---------->   returns true if the task was executed successfully <br>\n",
-                                        "<font color='goldenrod'>res.get():</font>  ---------->   takes the output of the task from celery  <br>\n",
+                                        "<font color='goldenrod'>res.get():</font>  ---------->   stop the threads and wait for the output to arrives <br>\n",
                                         "<font color='goldenrod'>res.getResult():</font>  ---------->   takes output if the task was successful <br>\n",
                                         "<font color='goldenrod'>res.getException():</font>  ---------->   return any exceptions along the way <br>\n",
                                         "\n",
                                         "\n"
+                              ]
+                    },
+                    {
+                              "cell_type": "markdown",
+                              "metadata": {},
+                              "source": [
+                                        "# Flower\n",
+                                        "\n",
+                                        "flower is an interface for monitoring workers and tasks\n",
+                                        "1) first add a new service to docker-compose named flower\n",
+                                        "2) use port 5555\n",
+                                        "3) pass rabbitmq as BROKER_URL environment variable\n",
+                                        "flower:\n",
+                                        "  container_name: flower\n",
+                                        "  image: mher/flower\n",
+                                        "  ports:\n",
+                                        "    - 5555:5555\n",
+                                        "  environment:\n",
+                                        "    - \"CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672\""
                               ]
                     }
           ],
