--- a/doc.ipynb
+++ b/doc.ipynb
@@ -343,13 +343,18 @@
                                         "1) first add a new service to docker-compose named flower\n",
                                         "2) use port 5555\n",
                                         "3) pass rabbitmq as BROKER_URL environment variable\n",
-                                        "flower:\n",
-                                        "  container_name: flower\n",
-                                        "  image: mher/flower\n",
-                                        "  ports:\n",
-                                        "    - 5555:5555\n",
-                                        "  environment:\n",
-                                        "    - \"CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672\""
+                                        "<font color='steelblue'>\n",
+                                        "<br>\n",
+                                        "flower:<br>\n",
+                                        "  container_name: flower<br>\n",
+                                        "  image: mher/flower<br>\n",
+                                        "  ports:<br>\n",
+                                        "    - 5555:5555<br>\n",
+                                        "  environment:<br>\n",
+                                        "    - \"CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672\"<br>\n",
+                                        "</font> \n",
+                                        "\n",
+                                        "4) open localhost on port 5555"
                               ]
                     }
           ],
