--- a/doc.ipynb
+++ b/doc.ipynb
@@ -356,6 +356,15 @@
                                         "\n",
                                         "4) open localhost on port 5555"
                               ]
+                    },
+                    {
+                              "cell_type": "markdown",
+                              "metadata": {},
+                              "source": [
+                                        "# Celery Beat\n",
+                                        "\n",
+                                        "celery beat is used for scheduling and triggring tasks in a determined time of the day\n"
+                              ]
                     }
           ],
           "metadata": {
